style.css
@font-face {
  font-family: 'Fira Code Web';
  src: url(font/FiraCode-Regular.woff2);
}

:root {
  --color-background: #e8e9ec;
  --color-background-alt: #dcdfe7;
  --color-text: #33374c;
  --color-text-alt: #262a3f;
  --color-link: #2d539e;
  --color-header: #c57339;
  --color-title: #7759b4;
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-background: #0f1117;
    --color-background-alt: #161821;
    --color-text: #c6c8d1;
    --color-text-alt: #d2d4de;
    --color-link: #84a0c6;
    --color-header: #e2a478;
    --color-title: #a093c7;
  }
}

body {
  background-color: var(--color-background);
  color: var(--color-text);
  font-family: "Segoe UI", "Helvetica Neue", Arial, sans-serif;
  font-size: medium;
  margin: 0px;
}

div, .top {
  background-color: var(--color-background-alt);
}

a {
  color: var(--color-link);
  background-color: transparent;
  text-decoration: none;
}

h2 {
  color: var(--color-header);
}

h3 {
  color: var(--color-title);
}

main {
  margin: 0px 10%;
}

code {
  font-family: 'Fira Code Web';
}

footer {
  font-size: small;
  text-align: center;
  height: 50px;
  margin-top: 20px;
}

img {
  max-width: 600px;
  width: 120px;
  height: auto;
}

.content {
  font-size: x-large;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  padding: 1em;
  border-radius: 10px;
  text-align: center;
}

.project {
  border-radius: 10px;
  padding: 2px 1%;
  margin: 1%;
}

.top {
  padding: 1em;
  text-align: center;
}

.row {
  display: flex;
}

.column {
  padding: 5px;
  text-align: center;
}

@media screen and (max-width: 500px) {
  main {
    margin: 0px 2%;
  }

  .content {
    left: 50%;
    top: 50%;
    padding: 0.5em;
    font-size: large;
  }

  .row {
    overflow: scroll;
  }

  .column {
    width: 100%;
  }
}

